node-red/template/nr-deploy.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/route-disabled: 'false'
    openshift.io/generated-by: OpenShiftWebConsole
  name: APP_NAME
  namespace: APP_PROJECT
  labels:
    app: APP_NAME
    app.kubernetes.io/component: APP_NAME
    app.kubernetes.io/instance: APP_NAME
    app.kubernetes.io/name: APP_NAME
    app.kubernetes.io/part-of: APP_NAME
    app.openshift.io/runtime: 3scale
    app.openshift.io/runtime-namespace: APP_PROJECT
    app.openshift.io/runtime-version: node-red-build
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - APP_NAME
        from:
          kind: ImageStreamTag
          namespace: APP_PROJECT
          name: 'node-red:1.0'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: APP_NAME
    deploymentconfig: APP_NAME
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: APP_NAME
        deploymentconfig: APP_NAME
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: APP_NAME-pvc
      containers:
        - name: APP_NAME
          ports:
            - containerPort: 1880
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /data
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
