node-red/template/nr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-service
  namespace: APP_PROJECT
spec:
  selector:
    app: APP_NAME
  ports:
    - name: 1880-tcp
      protocol: TCP
      port: 8080
      targetPort: 1880
  type: ClusterIP
