node-red/template/nr-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: APP_NAME-rt
  namespace: APP_PROJECT
spec:
  path: /
  to:
    kind: Service
    name: APP_NAME-service
  port:
    targetPort: 1880-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
